--- a/src/twitch-points-extension.css
+++ b/src/twitch-points-extension.css
@@ -1,3 +1,13 @@
+.light {
+    color: #000;
+    background-color: #fff;
+}
+
+.dark {
+    color: #fff;
+    background-color: #000;
+}
+
 .container {
     display: flex;
     flex-flow: column;
