--- a/src/twitch-points-extension.css
+++ b/src/twitch-points-extension.css
@@ -1,23 +1,25 @@
-.light {
+.light, .light * {
     color: #000;
     background-color: #fff;
 }
 
-.dark {
+.dark, .dark * {
     color: #fff;
     background-color: #000;
 }
 
+.clear-button {
+    cursor: pointer;
+    display: inline-flex;
+}
+
 .container {
+    padding: 12px;
     display: flex;
     flex-flow: column;
     align-items: center;
     justify-content: center;
     min-width: 280px;
-}
-
-.points {
-    flex: 1 100%;
 }
 
 table {
@@ -27,4 +29,13 @@ table {
 
 th {
     font-weight: bold;
+    text-align: inherit;
+}
+
+tr > td:last-of-type {
+    text-align: center;
+}
+
+body {
+    margin: 0;
 }
