--- a/src/twitch-points-extension.css
+++ b/src/twitch-points-extension.css
@@ -1,9 +1,11 @@
-.light, .light * {
+.light,
+.light * {
     color: #000;
     background-color: #fff;
 }
 
-.dark, .dark * {
+.dark,
+.dark * {
     color: #fff;
     background-color: #000;
 }
@@ -11,6 +13,8 @@
 .clear-button {
     cursor: pointer;
     display: inline-flex;
+    align-items: center;
+    gap: 4px;
 }
 
 .color-switcher {
@@ -24,12 +28,16 @@
     align-items: center;
     justify-content: center;
     min-width: 280px;
-    height: 100%;
+}
+
+body {
+    margin: 0;
 }
 
 table {
     width: 100%;
     border-collapse: collapse;
+    min-height: 24px;
 }
 
 th {
@@ -41,6 +49,6 @@ tr > td:last-of-type {
     text-align: center;
 }
 
-body {
-    margin: 0;
+tr>td:last-of-type {
+    text-align: center;
 }
